[metadata]
name = carp
version = attr: carp.__version__
description = EncFS managing libs
long_description = file: README.md
keywords = encfs
license = WTFPL
author = Étienne Deparis
author_email = etienne@depar.is
url = https://git.umaneti.net/carp/about/
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: What The F*** Public License (WTFPL)
    Programming Language :: Python :: 3

[options]
zip_safe = True
packages = find:
install_requires =
    inotify >= 0.2.9
    pyxdg

[options.entry_points]
console_scripts =
    carp = carp.carpcli:CarpCli
gui_scripts =
    carp-icon = carp.carpgui:run_icon
